Ajout des bonus, jeu fonctionelle techniquement

--- a/SnakeOPGL/SnakeOPGL.vcxproj
+++ b/SnakeOPGL/SnakeOPGL.vcxproj
@@ -134,6 +134,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\BonusItem.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\glad.c" />
@@ -145,6 +146,7 @@
     <ClCompile Include="src\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\BonusItem.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\glad\glad.h" />
@@ -165,6 +167,8 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="texture\snakeBody.png" />
+    <Image Include="texture\snakeHead.png" />
+    <Image Include="texture\snakeTail.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
