--- a/SnakeOPGL/SnakeOPGL.vcxproj.filters
+++ b/SnakeOPGL/SnakeOPGL.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\BonusItem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
@@ -83,6 +86,9 @@
     <ClInclude Include="include\Tile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\BonusItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\SpriteShader.vs" />
@@ -90,6 +96,12 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="texture\snakeBody.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="texture\snakeHead.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="texture\snakeTail.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
