hiatus temporaire avant ajout de bonus et bouton

--- a/SnakeOPGL/SnakeOPGL.vcxproj
+++ b/SnakeOPGL/SnakeOPGL.vcxproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\BonusItem.h" />
+    <ClInclude Include="include\Effect.h" />
     <ClInclude Include="include\freetype\config\ftconfig.h" />
     <ClInclude Include="include\freetype\config\ftheader.h" />
     <ClInclude Include="include\freetype\config\ftmodule.h" />
