--- a/SnakeOPGL/SnakeOPGL.vcxproj.filters
+++ b/SnakeOPGL/SnakeOPGL.vcxproj.filters
@@ -395,6 +395,9 @@
     <ClInclude Include="include\ft2build.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Effect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\SpriteShader.vs" />
